将 PastScreen 重构为 PastScreen-CN，并完成本地化与界面更新 	•	更新 QuickCaptureTip，标题和提示信息改为使用本地化字符串。 	•	将 CustomNotificationView 中的字符串翻译为中文，包括按钮帮助文本和预览提示信息。 	•	修改 OnboardingView，以反映新的应用名称，并将引导流程中的文本翻译为中文。 	•	翻译 SettingsView，包括各个标签页名称、设置项标签及帮助说明为中文。 	•	更新 Localizable.strings：保留英文版本，并新增中文翻译，覆盖应用中的各类字符串。 	•	修改 README.md，使用中文反映新的应用名称及功能说明。 	•	移除 context.md 和 onboarding/rename_mapping.txt，因为它们已不再需要。 	•	删除 scripts/create_appstore_screenshots.py，该脚本在当前构建流程中已无必要。

--- a/PastScreen/en.lproj/Localizable.strings
+++ b/PastScreen/en.lproj/Localizable.strings
@@ -1,144 +1,179 @@
 /* Menu Items */
-"menu.tooltip" = "PastScreen - Quick Screenshots";
-"menu.capture_area" = "Capture Area";
-"menu.capture_fullscreen" = "Capture Full Screen";
-"menu.show_last" = "Show Last Screenshot";
-"menu.history" = "History";
-"menu.history.empty" = "No recent captures";
-"menu.history.clear" = "Clear History";
-"menu.destination" = "Change Save Folder...";
-"menu.preferences" = "Preferences...";
-"menu.check_updates" = "Check for Updates...";
-"menu.quit" = "Quit PastScreen";
+"menu.tooltip" = "PastScreen-CN - 快速截图";
+"menu.capture_area" = "区域截图";
+"menu.capture_fullscreen" = "全屏截图";
+"menu.show_last" = "显示最近截图";
+"menu.history" = "历史记录";
+"menu.history.empty" = "暂无截图";
+"menu.history.clear" = "清空历史";
+"menu.destination" = "更改保存文件夹...";
+"menu.preferences" = "设置...";
+"menu.check_updates" = "检查更新...";
+"menu.quit" = "退出 PastScreen-CN";
 
 /* Window Titles */
-"window.preferences" = "PastScreen Preferences";
+"window.preferences" = "PastScreen-CN 设置";
 
 /* Settings - Tabs */
-"settings.tab.general" = "General";
-"settings.tab.capture" = "Capture";
-"settings.tab.storage" = "Storage";
+"settings.tab.general" = "通用";
+"settings.tab.capture" = "截图";
+"settings.tab.storage" = "存储";
 
 /* Settings - General */
-"settings.general.copy_clipboard" = "Copy to clipboard";
-"settings.general.copy_clipboard.help" = "Automatically copy screenshot to clipboard after capture";
-"settings.general.play_sound" = "Play sound effect";
-"settings.general.play_sound.help" = "Play camera shutter sound when taking screenshot";
-"settings.general.show_dimensions" = "Show dimensions";
-"settings.general.show_dimensions.help" = "Display selection dimensions while capturing";
-"settings.general.section_title" = "General Options";
-"settings.general.enable_annotations" = "Enable annotations";
-"settings.general.enable_annotations.help" = "Add arrows and text to screenshots before saving";
-"settings.general.features_section" = "Features";
-"settings.general.show_tutorial" = "Show tutorial on launch";
-"settings.general.show_tutorial.help" = "Display helpful tips when starting PastScreen";
-"settings.general.help_section" = "Help & Support";
+"settings.general.copy_clipboard" = "复制到剪贴板";
+"settings.general.copy_clipboard.help" = "截图完成后自动复制到剪贴板";
+"settings.general.play_sound" = "播放截图音效";
+"settings.general.play_sound.help" = "截图时播放相机快门音效";
+"settings.general.show_dimensions" = "显示尺寸";
+"settings.general.show_dimensions.help" = "截图时显示选区尺寸";
+"settings.general.section_title" = "通用选项";
+"settings.general.enable_annotations" = "启用标注";
+"settings.general.enable_annotations.help" = "保存前为截图添加箭头和文字";
+"settings.general.features_section" = "功能";
+"settings.general.show_tutorial" = "启动时显示教程";
+"settings.general.show_tutorial.help" = "启动 PastScreen-CN 时显示提示";
+"settings.general.help_section" = "帮助与支持";
 
 /* Settings - Capture */
-"settings.capture.format_section" = "Image Format";
-"settings.capture.image_format" = "Format:";
-"settings.capture.format_png" = "PNG (Lossless)";
-"settings.capture.format_jpeg" = "JPEG (Compressed)";
-"settings.capture.format_help" = "PNG provides better quality but larger file size. JPEG is more compact.";
-"settings.capture.shortcuts_section" = "Keyboard Shortcuts";
-"settings.capture.enable_hotkey" = "Enable global hotkey";
-"settings.capture.enable_hotkey.help" = "Allow keyboard shortcut to work system-wide";
-"settings.capture.capture_area_label" = "Capture selected area:";
-"settings.capture.click_icon_label" = "Or click menu bar icon to";
-"settings.capture.open_menu" = "open menu";
-"settings.capture.hotkey_disabled_help" = "Enable hotkey to capture from anywhere";
+"settings.capture.format_section" = "图片格式";
+"settings.capture.image_format" = "格式：";
+"settings.capture.format_png" = "PNG（无损）";
+"settings.capture.format_jpeg" = "JPEG（压缩）";
+"settings.capture.format_help" = "PNG 质量更好但体积更大，JPEG 更小。";
+"settings.capture.shortcuts_section" = "快捷键";
+"settings.capture.enable_hotkey" = "启用全局快捷键";
+"settings.capture.enable_hotkey.help" = "允许快捷键在全系统范围生效";
+"settings.capture.capture_area_label" = "截取选区：";
+"settings.capture.click_icon_label" = "或点击菜单栏图标";
+"settings.capture.open_menu" = "打开菜单";
+"settings.capture.hotkey_disabled_help" = "开启快捷键即可随时截图";
 
 /* Settings - Storage */
-"settings.storage.section_title" = "Storage Location";
-"settings.storage.save_to_disk" = "Save to disk";
-"settings.storage.save_to_disk.help" = "Save screenshots as files (in addition to clipboard)";
-"settings.storage.folder_label" = "Folder:";
-"settings.storage.change_button" = "Change...";
-"settings.storage.open_folder" = "Open Folder";
-"settings.storage.clear_folder" = "Clear Folder";
+"settings.storage.section_title" = "存储位置";
+"settings.storage.save_to_disk" = "保存到磁盘";
+"settings.storage.save_to_disk.help" = "除剪贴板外同时保存截图文件";
+"settings.storage.folder_label" = "文件夹：";
+"settings.storage.change_button" = "更改...";
+"settings.storage.open_folder" = "打开文件夹";
+"settings.storage.clear_folder" = "清空文件夹";
+"settings.select_folder.prompt" = "选择";
+"settings.select_folder.message" = "请选择用于保存截图的文件夹";
 
 /* Onboarding */
-"onboarding.title" = "Welcome to PastScreen 📸";
-"onboarding.subtitle" = "The fastest way to capture and paste screenshots";
-"onboarding.why_title" = "Why PastScreen?";
-"onboarding.ultrafast" = "⚡ Ultra-Fast";
-"onboarding.ultrafast.desc" = "Instantly capture and paste into your IDE";
-"onboarding.ultrafast.note" = "No file management, just pure speed";
-"onboarding.autoclean" = "🧹 Auto-Clean";
-"onboarding.autoclean.desc" = "Screenshots folder cleans itself on restart";
-"onboarding.autoclean.note" = "Zero maintenance, zero clutter";
-"onboarding.smart_notifications" = "🔔 Smart Notifications";
-"onboarding.smart_notifications.desc" = "Unobtrusive feedback that stays out of your way";
-"onboarding.smart_notifications.note" = "Know it worked without interruption";
-"onboarding.workflow" = "🎯 Workflow-First";
-"onboarding.workflow.desc" = "Built for developers who live in their editor";
-"onboarding.workflow.note" = "Capture → Paste → Continue coding";
-"onboarding.customizable" = "⚙️ Customizable";
-"onboarding.customizable.desc" = "Configure everything: hotkeys, formats, storage";
-"onboarding.vs_native" = "Unlike native macOS screenshot: No preview delay, direct clipboard";
-"onboarding.vs_other" = "Unlike other tools: No complex workflows or file management";
-"onboarding.dont_show" = "Don't show this again";
-"onboarding.got_it" = "Got it, let's go!";
+"onboarding.title" = "欢迎使用 PastScreen-CN 📸";
+"onboarding.subtitle" = "面向开发者的极速截图";
+"onboarding.why_title" = "为什么选择 PastScreen-CN？";
+"onboarding.ultrafast" = "⚡ 极速";
+"onboarding.ultrafast.desc" = "秒级截图并粘贴到你的 IDE";
+"onboarding.ultrafast.note" = "无需管理文件，只有速度";
+"onboarding.autoclean" = "🧹 自动清理";
+"onboarding.autoclean.desc" = "截图文件夹在重启时自动清理";
+"onboarding.autoclean.note" = "零维护、零杂乱";
+"onboarding.smart_notifications" = "🔔 智能通知";
+"onboarding.smart_notifications.desc" = "提示轻量不打扰";
+"onboarding.smart_notifications.note" = "悄悄告诉你已完成";
+"onboarding.workflow" = "🎯 工作流优先";
+"onboarding.workflow.desc" = "为长期在编辑器里的开发者打造";
+"onboarding.workflow.note" = "截图 → 粘贴 → 继续编码";
+"onboarding.customizable" = "⚙️ 可定制";
+"onboarding.customizable.desc" = "快捷键、格式、存储位置都可配置";
+"onboarding.vs_native" = "相比系统截图：无预览延迟，直接入剪贴板";
+"onboarding.vs_other" = "相比其他工具：无复杂流程、无需管理文件";
+"onboarding.dont_show" = "不再显示";
+"onboarding.got_it" = "明白了，开始吧！";
 
 /* Errors */
-"error.permissions_required.title" = "Screen Recording Permission Required";
-"error.permissions_required.message" = "PastScreen needs Screen Recording permission to capture screenshots.\n\nGo to System Preferences → Security & Privacy → Screen Recording and enable PastScreen.";
-"error.open_system_prefs" = "Open System Preferences";
-"error.later" = "Later";
-"error.accessibility_required.title" = "Accessibility Permission Required";
-"error.accessibility_required.message" = "PastScreen needs Accessibility permission to register global keyboard shortcuts.\n\nGo to System Settings → Privacy & Security → Accessibility and enable PastScreen.";
-"error.open_system_settings" = "Open System Settings";
-"error.capture_error" = "Screenshot capture failed";
-"error.unable_to_launch" = "Unable to launch PastScreen";
-"error.file_not_found.title" = "File Not Found";
-"error.file_not_found.message" = "The last screenshot could not be found. It may have been deleted or moved.";
-"error.invalid_rectangle" = "Invalid selection area";
-"error.permission_denied" = "Permission denied";
-"error.capture_interrupted" = "Screenshot capture was interrupted";
+"error.permissions_required.title" = "需要屏幕录制权限";
+"error.permissions_required.message" = "PastScreen-CN 需要屏幕录制权限才能截图。\n\n前往“系统设置 → 隐私与安全性 → 屏幕录制”并允许 PastScreen-CN。";
+"error.open_system_prefs" = "打开系统设置";
+"error.later" = "稍后";
+"error.accessibility_required.title" = "需要辅助功能权限";
+"error.accessibility_required.message" = "PastScreen-CN 需要辅助功能权限以注册全局快捷键。\n\n前往“系统设置 → 隐私与安全性 → 辅助功能”并允许 PastScreen-CN。";
+"error.open_system_settings" = "打开系统设置";
+"error.capture_error" = "截图失败";
+"error.unable_to_launch" = "无法启动 PastScreen-CN";
+"error.file_not_found.title" = "未找到文件";
+"error.file_not_found.message" = "无法找到最近的截图，可能已被删除或移动。";
+"error.invalid_rectangle" = "选区无效";
+"error.permission_denied" = "权限被拒绝";
+"error.capture_interrupted" = "截图被中断";
 
 /* Notifications */
-"notification.screenshot_ready" = "Screenshot ready";
-"notification.click_to_reveal" = "Click to reveal in Finder";
-"notification.screenshot_saved" = "Screenshot saved to clipboard";
-"notification.reveal_in_finder" = "Reveal in Finder";
-"notification.dismiss" = "Dismiss";
+"notification.screenshot_ready" = "截图已完成";
+"notification.click_to_reveal" = "点击在 Finder 中显示";
+"notification.screenshot_saved" = "截图已保存到剪贴板";
+"notification.reveal_in_finder" = "在 Finder 中显示";
+"notification.dismiss" = "关闭";
 
 /* Onboarding */
-"onboarding.subtitle" = "Screenshots for Developers";
-"onboarding.button.previous" = "Previous";
-"onboarding.button.next" = "Next";
-"onboarding.button.start" = "Get Started";
+"onboarding.button.previous" = "上一步";
+"onboarding.button.next" = "下一步";
+"onboarding.button.start" = "开始使用";
 
-"onboarding.page1.title" = "Ultra Fast";
-"onboarding.page1.description" = "Capture and paste in seconds.\nYour hotkey → Capture → ⌘V in your IDE";
+"onboarding.page1.title" = "极速";
+"onboarding.page1.description" = "几秒完成截图与粘贴。\n你的热键 → 截图 → ⌘V 粘贴";
 
-"onboarding.page2.title" = "Storage Location";
-"onboarding.page2.description" = "Choose where PastScreen saves your screenshots.";
+"onboarding.page2.title" = "存储位置";
+"onboarding.page2.description" = "选择 PastScreen-CN 保存截图的位置。";
 
-"onboarding.storage.default.title" = "Pictures Folder (Default)";
-"onboarding.storage.default.desc" = "Save to your Pictures folder.\n(Requires permission)";
+"onboarding.storage.default.title" = "图片文件夹（默认）";
+"onboarding.storage.default.desc" = "保存到“图片”文件夹。\n（需要权限）";
 
-"onboarding.storage.temp.title" = "Temporary (Auto-Clean)";
-"onboarding.storage.temp.desc" = "Perfect for quick copy/paste.\nFiles deleted on restart.";
+"onboarding.storage.temp.title" = "临时（自动清理）";
+"onboarding.storage.temp.desc" = "适合快速复制粘贴。\n重启后自动删除。";
 
-"onboarding.page3.title" = "Direct Clipboard";
-"onboarding.page3.description" = "Automatic clipboard copy.\nPerfect for Cursor, VSCode, Zed.";
+"onboarding.page3.title" = "直接剪贴板";
+"onboarding.page3.description" = "自动复制到剪贴板。\n适配 Cursor、VSCode、Zed。";
 
-"onboarding.page4.title" = "Customizable";
-"onboarding.page4.description" = "Shortcuts, formats, folders...\nEverything configurable from the menu bar.";
+"onboarding.page4.title" = "可定制";
+"onboarding.page4.description" = "快捷键、格式、文件夹...\n菜单栏即可配置。";
 
-"onboarding.page_apps.title" = "App Rules";
-"onboarding.page_apps.description" = "Customize behavior per app.\nForce Image copy for AI tools, Path for Code Editors.";
+"onboarding.page_apps.title" = "应用规则";
+"onboarding.page_apps.description" = "按应用自定义行为。\nAI 工具用“图片”，代码编辑器用“路径”。";
 
 /* Onboarding - Permissions */
-"onboarding.permissions.screen_recording.title" = "Screen Recording";
-"onboarding.permissions.screen_recording.description" = "Required to capture your screen.\nClick below to grant permission.";
-"onboarding.permissions.accessibility.title" = "Keyboard Shortcut";
-"onboarding.permissions.accessibility.description" = "Required for global hotkey.\nClick below to grant permission.";
-"onboarding.permissions.grant" = "Grant Permission";
-"onboarding.permissions.granted" = "Permission Granted";
+"onboarding.permissions.screen_recording.title" = "屏幕录制";
+"onboarding.permissions.screen_recording.description" = "截图需要此权限。\n点击下方授权。";
+"onboarding.permissions.accessibility.title" = "辅助功能";
+"onboarding.permissions.accessibility.description" = "全局快捷键需要此权限。\n点击下方授权。";
+"onboarding.permissions.grant" = "授权";
+"onboarding.permissions.granted" = "已授权";
 
 /* Permission Alerts */
-"permission.request.header" = "PastScreen needs the following permissions to work properly:";
-"permission.request.footer" = "Please enable them in System Preferences > Privacy & Security.";
-"permission.max_retries.message" = "PastScreen has reached the maximum number of permission requests.\n\nPlease manually enable";
+"permission.request.header" = "PastScreen-CN 需要以下权限才能正常工作：";
+"permission.request.footer" = "请在“系统设置 → 隐私与安全性”中开启。";
+"permission.max_retries.message" = "PastScreen-CN 已达到权限请求次数上限。\n\n请手动开启";
+
+/* Hotkey Labels */
+"hotkey.key.code" = "按键 %d";
+"hotkey.key.space" = "空格";
+"hotkey.key.return" = "回车";
+"hotkey.key.tab" = "Tab";
+"hotkey.key.delete" = "删除";
+"hotkey.key.escape" = "Esc";
+"hotkey.key.forward_delete" = "前向删除";
+"hotkey.key.home" = "Home";
+"hotkey.key.end" = "End";
+"hotkey.key.page_up" = "Page Up";
+"hotkey.key.page_down" = "Page Down";
+"hotkey.key.left" = "左";
+"hotkey.key.right" = "右";
+"hotkey.key.down" = "下";
+"hotkey.key.up" = "上";
+
+/* Tips */
+"tip.quick_capture.title" = "PastScreen-CN 提示";
+"tip.quick_capture.message" = "使用你的热键或 Apple 快捷指令即可快速截图。";
+
+/* App Intents */
+"intent.capture_area.title" = "选区截图";
+"intent.capture_area.description" = "使用 PastScreen-CN 截取自定义区域并复制图片。";
+"intent.capture_area.phrase1" = "用 \\(.applicationName) 选区截图";
+"intent.capture_area.phrase2" = "使用 \\(.applicationName) 截取选区";
+"intent.capture_area.short_title" = "选区截图";
+"intent.capture_full.title" = "全屏截图";
+"intent.capture_full.description" = "使用 PastScreen-CN 截取全屏并复制结果。";
+"intent.capture_full.phrase1" = "用 \\(.applicationName) 全屏截图";
+"intent.capture_full.phrase2" = "使用 \\(.applicationName) 截取全屏";
+"intent.capture_full.short_title" = "全屏截图";
+"intent.error.app_unavailable" = "PastScreen-CN 需要运行中才能执行此操作。";
