--- a/PastScreen/en.lproj/Localizable.strings
+++ b/PastScreen/en.lproj/Localizable.strings
@@ -73,6 +73,10 @@
 "settings.editor.toolbar.description" = "Choose which tools appear after taking an advanced capture.";
 "settings.editor.toolbar.reorder_hint" = "Use the arrows on the right to reorder the toolbar.";
 "settings.editor.toolbar.note" = "Keep at least one tool enabled.";
+"settings.editor.radial.title" = "Quick wheel";
+"settings.editor.radial.description" = "Customize the right-click quick wheel with 1-4 enabled tools.";
+"settings.editor.radial.add" = "Add tool";
+"settings.editor.radial.note" = "Keep at least one tool. Right-click in the editor to open the wheel.";
 
 /* Settings - Storage */
 "settings.storage.section_title" = "Save location";
