--- a/PastScreen/en.lproj/Localizable.strings
+++ b/PastScreen/en.lproj/Localizable.strings
@@ -75,6 +75,7 @@
 "settings.editor.toolbar.note" = "Keep at least one tool enabled.";
 "settings.editor.radial.title" = "Quick wheel";
 "settings.editor.radial.description" = "Customize the right-click quick wheel with 1-4 enabled tools.";
+"settings.editor.radial.enabled" = "Use quick wheel";
 "settings.editor.radial.add" = "Add tool";
 "settings.editor.radial.note" = "Keep at least one tool. Right-click in the editor to open the wheel.";
 
