--- a/PastScreen/zh-Hans.lproj/Localizable.strings
+++ b/PastScreen/zh-Hans.lproj/Localizable.strings
@@ -75,6 +75,7 @@
 "settings.editor.toolbar.note" = "至少保留一个工具。";
 "settings.editor.radial.title" = "快捷轮盘";
 "settings.editor.radial.description" = "自定义右键呼出的快捷轮盘，添加 1-4 个已启用的常用工具。";
+"settings.editor.radial.enabled" = "启用快捷轮盘";
 "settings.editor.radial.add" = "添加工具";
 "settings.editor.radial.note" = "至少保留 1 个工具，在编辑器里右键打开快捷轮盘。";
 
