--- a/PastScreen/en.lproj/Localizable.strings
+++ b/PastScreen/en.lproj/Localizable.strings
@@ -67,6 +67,7 @@
 "settings.capture.hotkey_disabled_help" = "Enable shortcuts to capture anytime";
 "settings.capture.quick_screenshot" = "Quick Capture";
 "settings.capture.advanced_screenshot" = "Advanced Capture";
+"settings.capture.ocr_capture" = "OCR";
 "settings.capture.window_border" = "Window border";
 "settings.capture.window_border.enable" = "Enable window border";
 "settings.capture.window_border.width" = "Border width";
@@ -216,6 +217,11 @@
 /* Tips */
 "tip.quick_capture.title" = "PastScreen-CN Tip";
 "tip.quick_capture.message" = "Use your hotkey or an Apple Shortcut to capture quickly.";
+
+/* OCR Hotkey */
+"toast.ocr.success" = "OCR copied";
+"toast.ocr.failure" = "OCR failed";
+"toast.ocr.no_text" = "No text found";
 
 /* App Intents */
 "intent.capture_area.title" = "Selection capture";
