--- a/PastScreen/zh-Hans.lproj/Localizable.strings
+++ b/PastScreen/zh-Hans.lproj/Localizable.strings
@@ -67,6 +67,7 @@
 "settings.capture.hotkey_disabled_help" = "开启快捷键即可随时截图";
 "settings.capture.quick_screenshot" = "快速截图";
 "settings.capture.advanced_screenshot" = "高级截图";
+"settings.capture.ocr_capture" = "OCR";
 "settings.capture.window_border" = "窗口边框";
 "settings.capture.window_border.enable" = "启用窗口边框";
 "settings.capture.window_border.width" = "边框宽度";
@@ -216,6 +217,11 @@
 /* Tips */
 "tip.quick_capture.title" = "PastScreen-CN 提示";
 "tip.quick_capture.message" = "使用你的热键或 Apple 快捷指令即可快速截图。";
+
+/* OCR Hotkey */
+"toast.ocr.success" = "OCR 已复制";
+"toast.ocr.failure" = "OCR 失败";
+"toast.ocr.no_text" = "未识别到文字";
 
 /* App Intents */
 "intent.capture_area.title" = "选区截图";
