新增 Localization.swift 并 swizzle Bundle.main.localizedString 做运行时切换；AppSettings.applyAppLanguage() 调用 Bundle.setAppLanguage。整体思路OK，但需注意：如果某些非 SwiftUI 的字符串是直接 NSLocalizedString + 未重新获取（例如已创建的菜单/窗口标题），可能需要手动刷新才能生效，建议验证菜单/通知等是否即时切换。 在 project.pbxproj 里 CODE_SIGN_IDENTITY[sdk=macosx*] 从 - 改为 Apple Development（Debug/Release 均改）。如果不希望变更签名配置，请确认。 Info-AppStore.plist 新增多语言到 CFBundleLocalizations，与 knownRegions 变更一致（包含 lzh/aq/ja/ko/de/fr/es/nl）。 AppLanguage 扩展为多语言并新增 antarctic，切换到南极语会播放音效 - Enhanced user experience by providing localized content for Dutch and Chinese users.

--- a/PastScreen/en.lproj/Localizable.strings
+++ b/PastScreen/en.lproj/Localizable.strings
@@ -49,7 +49,16 @@
 "settings.general.language" = "Language";
 "settings.general.language.system" = "Follow System";
 "settings.general.language.zh_hans" = "简体中文";
+"settings.general.language.zh_hant" = "繁體中文";
+"settings.general.language.classical_chinese" = "文言文";
 "settings.general.language.english" = "English";
+"settings.general.language.japanese" = "日本語";
+"settings.general.language.korean" = "한국어";
+"settings.general.language.german" = "Deutsch";
+"settings.general.language.french" = "Français";
+"settings.general.language.spanish" = "Español";
+"settings.general.language.dutch" = "Nederlands";
+"settings.general.language.antarctic" = "Antarctic (sound)";
 "settings.general.language.note" = "Restart app to apply language change.";
 
 /* Settings - Capture */
